--- a/test_MAKEFILE/Makefile
+++ b/test_MAKEFILE/Makefile
@@ -1,13 +1,13 @@
 .PHONY: all clean fclean re
 
-NAME = libft_malloc_$$(HOSTTYPE).so
+ifeq ($(HOSTTYPE),)
+    		HOSTTYPE := $(shell uname -m)_$(shell uname -s)
+endif
+
+NAME = libft_malloc_
 
 all: $(NAME)
 
-$(NAME): make_name
-	echo $(NAME)
+$(NAME):
+	echo $(NAME).$(HOSTTYPE).so
 
-make_name:
-	ifeq ($(HOSTTYPE),)
-    		HOSTTYPE := $(shell uname -m)_$(shell uname -s)
-    endif
