--- a/test_MAKEFILE/Makefile
+++ b/test_MAKEFILE/Makefile
@@ -4,7 +4,7 @@ ifeq ($(HOSTTYPE),)
     		HOSTTYPE := $(shell uname -m)_$(shell uname -s)
 endif
 
-NAME = libft_malloc_
+NAME = libmalloc_
 
 all: $(NAME)
 
